# tapas-reduce

./: .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  doxyfile.in  setup-travis.sh  tapas_test_common.sh  test.py  test.sh  zzmatumemo.txt
cpp/: CMakeLists.txt  unittest.cpp
cpp/include/: tapas.h
cpp/include/tapas/: basic_types.h  cell.h  common.h  debug_util.h  geometry.h  hot.h  iterator.h  main.h  map.h  mapper.h  morton_common.h  morton_hot.h  morton_key.h  mpi_util.h  sfc_morton.h  single_node_hot.h  single_node_mapper.h  single_node_morton_hot.h  test.h  util.h  vec.h  vectormap.h  vectormap_cpu.h  vectormap_cuda.h  vectormap_util.h
cpp/include/tapas/hot/: buildtree.h  data.h  exact_let.h  global_tree.h  let.h  let_common.h  mapper.h  oneside_let.h  opt_let.h  report.h  shared_data.h
cpp/include/tapas/threading/: default.h  massivethreads.h  serial.h  tbb.h
cpp/tests/: CMakeLists.txt  Makefile  test_allgatherv.cpp  test_alltoallv.cpp  test_cpptricks.cpp  test_distance.cpp  test_geometry.cpp  test_morton_key.cpp  test_set.cpp  unittest.cpp
sample/: CMakeLists.txt
sample/barnes-hut/: Makefile  a.out  bh.cc  bh_accumulate.cc  bh_mpi  bh_reduce.cc  bh_ref.txt  bh_tapas.txt  cells.s.0.stderr.txt  tmp.cpp
sample/exafmm-dev-13274dd4ac68/: CMakeLists.txt  Makefile.include
sample/exafmm-dev-13274dd4ac68/examples/: CMakeLists.txt  LaplaceP2PCPU_tapas.cxx  LaplaceP2PCPU_tapas.h  LaplaceSphericalCPU_tapas.cxx  LaplaceSphericalCPU_tapas.h  LaplaceSphericalCPU_tapas_reduce.h  Makefile  mk.cuda  parallel.cxx  serial_tapas.cxx  serial_tapas_helper.cxx  tapas_exafmm.cxx  tapas_exafmm.h  tapas_exafmm_reduce.cxx  tapasfmm_debug.h
sample/exafmm-dev-13274dd4ac68/include/: args.h  dataset.h  logger.h  macros.h  traversal.h  tree_mpi.h  types.h  vec.h
sample/exafmm-dev-13274dd4ac68/include/tpswitch/: tpswitch.h  tpswitch2.h
sample/mpi-rma/: CMakeLists.txt  rma-test.cxx
scripts/: job.sh
scripts/measure/: build.sh  build_exafmm.sh  run.py  run.sh  setup.sh
